--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,26 @@
 {
-  "name": "robofirm/devops-tool-magento-1-platform-support",
-  "description": "Robofirm DevOps Tool: Magento 1 Application Support",
-  "type": "library",
-  "homepage": "https://bitbucket.org/robofirm/devops-tool-magento-1-platform-support",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Kirk Madera",
-      "email": "kmadera@robofirm.com"
+    "name": "robofirm/devops-tool-magento-1-platform-support",
+    "description": "Robofirm DevOps Tool: Magento 1 Application Support",
+    "type": "library",
+    "homepage": "https://bitbucket.org/robofirm/devops-tool-magento-1-platform-support",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Kirk Madera",
+            "email": "kmadera@robofirm.com"
+        }
+    ],
+    "require": {
+        "symfony/yaml": "~2.3|~3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "DevopsToolMagento1PlatformSupport\\": "src/"
+        }
+    },
+    "extra": {
+        "zf": {
+            "config-provider": "DevopsToolMagento1PlatformSupport\\ConfigProvider"
+        }
     }
-  ],
-  "require": {
-    "symfony/yaml": "~2.3|~3.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "DevopsToolMagento1PlatformSupport\\": "src/"
-    }
-  }
 }
