--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "require": {
         "php": "^7.1",
-        "conductor/application-orchestration": "^*"
+        "conductor/application-orchestration": "*"
     },
     "autoload": {
         "psr-4": {
