--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "conductor/magento-1-platform-support",
-    "description": "Conductor: Magento 1 Application Support",
+    "description": "Conductor: Magento 1 Platform Support",
     "type": "library",
     "homepage": "https://github.com/conductorphp/conductor-magento-1-platform-support",
     "license": "Apache 2.0",
